also renamed simple_query to query_struct to avoid misunderstanding
